--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -77,7 +77,7 @@
 
 <link rel="stylesheet" href="/main.css"/>
 
-<img  src="/HT-PixTeller (1).png"  alt="ss" class="card-img" id="explainer1"/>  
+<img  src="/website2.png"  alt="ss" class="card-img" id="explainer1"/>  
 
 <img  src="/HT-PixTeller (3).png"  alt="ss" id="explainer2"/>  
 <div class="card mb-0" >
