--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -252,7 +252,7 @@ $('#bakwas-2').click(function(ev){
     success: function(res){
     console.log(res);
       //now we can access stuff off res
-      if(res,length==0){
+      if(res.length==0){
       $('#alrt').append(`<div class="alert alert-warning alert-dismissible fade show" role="alert">
   <strong>Data Unavailable</strong>We are working on adding this data
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
