--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -23,12 +23,12 @@
    <?xml version="1.0" encoding="utf-8" ?>
 
 </head>
-<div class="alert alert-dark" role="alert">
+<!--div class="alert alert-dark" role="alert">
   <span class="badge badge-success">5★</span> score above 90/100, 
   <span class="badge badge-warning">3★</span> score above 50/100 and
   <span class="badge badge-danger">2★</span>  score below 50/100
    Score based on beds,ICUs,Vents and other factors
-</div>
+</div-->
 <div class="jumbotron jumbotron-fluid" style="margin-bottom: 0">
   <div class="container">
     <h4>The Hospital Search Engine</h4>
@@ -51,7 +51,7 @@
   
    <br><h5> OR</h5>
    
- 
+   <h6>Search by State:<h6>
    <form action="/search-city" method="GET">
      <div style="display:flex;flex-direction: row">
    <select id="select_state" name="select_state" class="form-control form-control-sm" style="width:90%">
