--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -50,7 +50,7 @@
 <span id="state">State</span>,<span id="city">City</span></div>
    <br><h5> OR</h5>
    
-   <h6>Search by State/City:<h6>
+   <h6>Search by State/City:</h6>
    <form action="/search-city" method="GET">
      <div style="display:flex;flex-direction: row">
    <select id="select_state" name="select_state" class="form-control form-control-sm" style="width:90%">
