--- a/views/hospital_dashboard.ejs
+++ b/views/hospital_dashboard.ejs
@@ -12,7 +12,7 @@
     </div>
   </div>
   <div class="form-group">
-    <label for="inputAddress">Beds</label>
+    <label for="inputAddress">Available Beds</label>
     <input type="text" class="form-control" id="Address" name="beds" placeholder="1234">
   </div>
   <div class="form-group">
